fixed viz dropdown menus alignment

--- a/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
+++ b/src/main/webapp/content/scss/partials/_flair-bi-content-header.scss
@@ -495,6 +495,10 @@
     margin-top: 20px;
 }
 
+.flair-content-header-menu{
+    padding: 0px;
+}
+
 @media screen and (max-width: $break-medium) {
     .dashboard-filter-header-fullscreen {
         margin-left: 0px;
@@ -622,4 +626,4 @@
     .visual-msc{
       display: none;
     }
-  }
+}
